--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
                         border-radius: 4px;
                         ">
             <tt>@InProceedings{munro20multi, </br>
-                author      = "Jonathan Munro and Damen, Dima",</br>
+                author      = "Munro, Jonathan and Damen, Dima",</br>
                 title       = "{M}ulti-modal {D}omain {A}daptation for {F}ine-grained {A}ction {R}ecognition",</br>
                 booktitle   = "Computer Vision and Pattern Recognition (CVPR)",</br>
                 year        = "2020"</br>}</tt>
