Colored caption and added link to homepage

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                  </figcaption>
             </figure>
             <p>
-Proposed architecture: feature extractors F<sup>RGB</sup> and F<sup>Flow</sup> are shared for both target and source domains. Domain Discriminators,D<sup>RGB</sup>and D<sup>Flow</sup>, are applied to each modality. Self-supervised correspondence of modalities, C, is trained from both source and unlabelled target data. Classifiers,G<sup>RGB</sup> and G<sup>Flow</sup> are trained using source domain examples only from the average pooled classification scores of each modality. During inference, multi modal target data is classified.
+Proposed architecture: feature extractors <font color=#00CED1>F<sup>RGB</sup></font> and <font color="green">F<sup>Flow</sup></font> are shared for both <font color="red">target</font> and <font color="blue">source</font> domains. Domain Discriminators, <font color=#00CED1>D<sup>RGB</sup></font> and <font color="green">D<sup>Flow</sup></font>, are applied to each modality. Self-supervised correspondence of modalities, C, is trained from both <font color="blue">source</font> and <font color="red">unlabelled target data</font>. Classifiers, <font color=#00CED1>G<sup>RGB</sup></font> and <font color="green">G<sup>Flow</sup></font> are trained using <font color="blue">source</font> domain examples only from the average pooled classification scores of each modality. During inference, multi modal <font color="red">target</font> data is classified.
             </p>
         </div>
       </div>
@@ -82,7 +82,7 @@ Proposed architecture: feature extractors F<sup>RGB</sup> and F<sup>Flow</sup> a
         <div class="col-lg-8 mx-auto">
           <h2>Authors</h2>          
           <ul>
-            <li><a target="_blank">Jonathan Munro</a> - University of Bristol, Visual Information Laboratory</li>
+            <li><a href="https://jonmun.github.io/" target="_blank">Jonathan Munro</a> - University of Bristol, Visual Information Laboratory</li>
             <li><a href="http://people.cs.bris.ac.uk/~damen/" target="_blank">Dima Damen</a> - University of Bristol, Visual Information Laboratory</li>           
           </ul>
         </div>
