--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <h5><a class="js-scroll-trigger" href="#page-top" style="color:white">MM-DADA</a></h5>
+      <h5><a class="js-scroll-trigger" href="#page-top" style="color:white">MM-SADA</a></h5>
     </div>
   
     <div class="container">
