--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Video</h2>       
+          <h2>Video</h2>  
+          <div class="videoWrapper">    
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qgd-DBgf-S0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
+          </div>
         </div>
       </div>
     </div>
