--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Action Recognition from Single Timestamp Supervision in Untrimmed Videos</title>
+  <title>Multi-modal Domain Adaptation for Fine-grained Action Recognition</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -23,7 +23,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
     <div class="container">
-      <h5><a class="js-scroll-trigger" href="#page-top" style="color:white">MM-SADA</a></h5>
+      <h5><a class="js-scroll-trigger" href="#page-top" style="color:white">Multi-modal Domain Adaptation for Fine-grained Action Recognition</a></h5>
     </div>
   
     <div class="container">
