Added link to arXiv and pdf

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
         <div class="col-lg-8 mx-auto">
           <h2>Download</h2>
           <ul>
-            <li>Paper to be uploaded</li>            
-            <li>Dataset labels to be uploaded</li>  
+            <li><a href=https://arxiv.org/abs/2001.09691>Link to ArXiv</a></li>
+	    <li><a href="mmsada.pdf" download>PDF</a></li>
+            <li>Dataset labels to be uploaded</li>
           </ul>
         </div>
       </div>
