Added Oral Presentation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link js-scroll-trigger" href="#abstract">Abstract</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#video">Video</a>
+            <a class="nav-link js-scroll-trigger" href="#video">Videos</a>
           </li>
          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#download">Download</a>
@@ -105,14 +105,26 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2>Video</h2>  
+	  <h2>Oral Presentation</h3>
           <div class="videoWrapper">    
-<iframe  src="https://www.youtube.com/embed/qgd-DBgf-S0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
-          </div>
-        </div>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/ldbPbXYQ5Js" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	  </div>
       </div>
     </div>
   </section>
+ 
+  <section id="video">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+	  <h2>Feature Visualisation</h3>
+          <div class="videoWrapper">    
+<iframe  src="https://www.youtube.com/embed/qgd-DBgf-S0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   	  
+          </div>
+      </div>
+    </div>
+  </section>
+ 
   
   <section id="download">
     <div class="container">
@@ -122,7 +134,7 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
           <ul>
             <li><a href=https://arxiv.org/abs/2001.09691>Link to ArXiv</a></li>
 	    <li><a href="mmsada.pdf" download>PDF</a></li>
-            <li>Dataset labels to be uploaded</li>
+	    <li><a href=https://github.com/jonmun/MM-SADA_Domain_Adaptation_Splits>Annotations</a></li>
           </ul>
         </div>
       </div>
