Added png poster to Downloads

--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
             <li><a href=https://arxiv.org/abs/2001.09691>Link to ArXiv</a></li>
 	    <li><a href="mmsada.pdf" download>PDF</a></li>
 	    <li><a href=https://github.com/jonmun/MM-SADA_Domain_Adaptation_Splits>Annotations</a></li>
-	    <li><a href=poster.png>Poster (high quality 5.6M)</a></li> 
-	    <li><a href=poster.jpg>Poster (low quality 0.9M)</a></li>  
+	    <li><a href=poster.png>Poster</a></li> 
           </ul>
         </div>
       </div>
