--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@ Fine-grained action recognition datasets exhibit environmental bias, where multi
         <div class="col-lg-8 mx-auto">
           <h2>Download</h2>
           <ul>
+	    <li><a href="http://openaccess.thecvf.com/content_CVPR_2020/html/Munro_Multi-Modal_Domain_Adaptation_for_Fine-Grained_Action_Recognition_CVPR_2020_paper.html" download>Link to CVPR 2020 Publication</a></li>	
             <li><a href=https://arxiv.org/abs/2001.09691>Link to ArXiv</a></li>
-	    <li><a href="mmsada.pdf" download>PDF</a></li>
 	    <li><a href=https://github.com/jonmun/MM-SADA_Domain_Adaptation_Splits>Annotations</a></li>
 	    <li><a href=poster.png>Poster</a></li> 
           </ul>
